--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,9 +1,125 @@
-h1 {
-    font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
-ul {
+h1 {
+    font-family: 'Pacifico', cursive;
+    text-align: center;
+    margin-top: 50px;
+}
+
+nav li {
+    list-style: none;
+    text-align: center;
+    
+}
+
+.green {
+    color: green;
+}
+.red {
+    color: red;
+}
+
+.white {
+    color: white;
+}
+
+
+
+header {
+    /* display: flex; */
+    background-color: #37B1C0;
+    height: 100vh;
+    width: 20vw;
+}
+
+.main-container {
+    background-image: url("./images/pizza-3007395_1920.jpg");
+    width: auto;
+    height: 100vh;
+    background-position: center;
+    /* background-size: cover; */
     display: flex;
+}
+
+nav {
+    height: 80%;
+    color: white;
+
+}
+
+nav ul {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    flex-wrap: wrap;
+    font-size: 2rem;
+    font-family: 'Pacifico', cursive;
+}
+
+
+.login-form {
+    width: 20rem;
+    height: 40rem;
+    /* border-radius: 200px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: 5px solid black;
+    font-size: 2ch;  
+    font-family: sans-serif;  
+}
+
+.signup-form {
+    width: 20rem;
+    height: 40rem;
+    /* border-radius: 200px; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    background-color: white;
+    border: 5px solid black;
+    font-size: 2ch;  
+    font-family: sans-serif;  
+}
+
+.login-form, .signup-form h1 {
+    font-family: sans-serif;
+    font-size: large;
+    
+}
+
+.login-form h1 {
+    font-family: sans-serif;
+    font-size: large;
+}
+
+input {
+    width: 98%;
+    height: 2rem;
+}
+
+.signup {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+}
+
+.form-container {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+.login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
