--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 h1 {
@@ -38,7 +39,7 @@ header {
     width: 20vw;
 }
 
-.main-container {
+.App {
     background-image: url("./images/pizza-3007395_1920.jpg");
     width: auto;
     height: 100vh;
@@ -111,12 +112,16 @@ input {
     display: flex;
     flex-direction: column;
     margin-top: 40px;
+    /* justify-content: space-around; */
 }
 
 .form-container {
     display: flex;
     align-items: center;
-    margin: 0 auto;
+    justify-content: center;
+    width: 80vw;
+    height: 100vh;
+    
 }
 .login {
     display: flex;
