--- a/client/src/products.css
+++ b/client/src/products.css
@@ -7,10 +7,14 @@
 .container-products {
     display: flex;
     flex-wrap: wrap;
-    width: 70vw;
+    width: 80vw;
+    height: 100vh;
     justify-content: space-around;
     
     padding-top: 50px;
+    background-color: white;
+    
+    
 }
 
 .container-products {
