--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -1,11 +1,33 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap');
+
 .account {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width: 80vw;
     height: 100vh;
-    justify-content: space-around;
-    padding-top: 50px;
+    font-family: 'Baloo Tammudu 2', cursive;
+    /* justify-content: space-around; */
+    /* padding-top: 50px; */
     background-color: white;
-    
-    
+}
+
+.account button {
+    width: 100px;
+    height: 100px;
+}
+
+.checkout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: 100vh;
+    /* font-family: 'Baloo Tammudu 2', cursive; */
+    /* justify-content: space-around; */
+    /* padding-top: 50px; */
+    background-color: white;
+}
+
+.checkout h1 {
+    font-family: 'Baloo Tammudu 2', cursive;
 }
