--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 
 .account {
     display: flex;
@@ -11,9 +12,9 @@
     background-color: white;
 }
 
-.account button {
+.account button, .admin button {
     width: 100px;
-    height: 100px;
+    height: 30px;
 }
 
 .checkout {
@@ -28,6 +29,21 @@
     background-color: white;
 }
 
-.checkout h1 {
+.checkout h1, .admin h1 {
     font-family: 'Baloo Tammudu 2', cursive;
+    text-align: left;
+    
 }
+
+.admin {       
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    height: 100vh;
+    /* justify-content: space-around; */
+    /* padding-top: 50px; */
+    background-color: white;
+    margin-left: 70px;
+    
+}
+
