--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -43,7 +43,7 @@
     /* justify-content: space-around; */
     /* padding-top: 50px; */
     background-color: white;
-    margin-left: 70px;
+    padding-left: 70px;
     
 }
 
