--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -4,18 +4,18 @@
 * {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 h1 {
     font-family: 'Pacifico', cursive;
     text-align: center;
-    margin-top: 50px;
+    /* margin-top: 10px; */
 }
 
 nav li {
     list-style: none;
-    text-align: center;
+    /* text-align: center; */
     
 }
 
@@ -35,32 +35,42 @@ nav li {
 header {
     /* display: flex; */
     background-color: #37B1C0;
-    height: 100vh;
-    width: 20vw;
+    height: 10vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 2px solid black;
+    
 }
 
 .App {
     background-image: url("../images/pizza-3007395_1920.jpg");
     width: auto;
     height: 100vh;
-    background-position: center;
+    /* background-position: center; */
     /* background-size: cover; */
     display: flex;
+    flex-direction: column;
 }
 
+
+
 nav {
-    height: 80%;
+    width: 50%;
     color: white;
 
 }
 
 nav ul {
-    height: 100%;
+    /* height: 50%; */
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
     justify-content: space-around;
-    font-size: 2rem;
-    font-family: 'Pacifico', cursive;
+    font-size: 1.3rem;
+    /* font-family: 'Pacifico', cursive; */
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -133,3 +143,4 @@ p {
     font-size: 1ch;
     color: red
 }
+
