--- a/client/src/styles/cart.css
+++ b/client/src/styles/cart.css
@@ -15,7 +15,7 @@
     width: 80vw;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     font-family: 'Montserrat', sans-serif;
         
 }
@@ -23,18 +23,50 @@
 .container-component-cart li {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
+    list-style: none;
 }
 
 .container-component-cart h1 {
-    list-style: none;
-    font-size: 2rem;
-
-
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
 }
 
 
 .container-component-cart img {
+    width: 350px;
+    height: auto;
+}
+
+.container-cart {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90vw;
+    height: 80vh;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.product-card {
+    background-color: white;
     width: 400px;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px black solid;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
+}
+
+.total {
+    display: flex;
+    justify-content: space-around;
+    width: 70vw;
+    margin: 0 auto
+}
+
+.total button {
+    width: 30%;
 }
