--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,146 +1,116 @@
-@import url('https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Cedarville+Cursive&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    /* overflow: hidden; */
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
+  font-family: "Montserrat";
 }
 
-h1 {
-    font-family: 'Pacifico', cursive;
-    text-align: center;
-    /* margin-top: 10px; */
+.logo {
+  font-family: "Pacifico", cursive;
+  /* text-align: center; */
+  /* margin-top: 10px; */
 }
 
 nav li {
-    list-style: none;
-    /* text-align: center; */
-    
+  list-style: none;
+  /* text-align: center; */
 }
 
-.green {
-    color: green;
+.logo-link {
+  color: black;
+  text-decoration: none;
 }
-.red {
-    color: red;
-}
-
-.white {
-    color: white;
-}
-
-
 
 header {
-    /* display: flex; */
-    background-color: #37B1C0;
-    height: 10vh;
-    width: 100vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-bottom: 2px solid black;
-    
+  /* display: flex; */
+  background-color: #ffffff;
+  height: 10vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 2px solid #c1c1c1;
 }
 
 .App {
-    background-image: url("../images/pizza-3007395_1920.jpg");
-    width: auto;
-    height: 100vh;
-    /* background-position: center; */
-    /* background-size: cover; */
-    display: flex;
-    flex-direction: column;
+  background-image: url("../images/pizza-3007395_1920.jpg");
+  width: auto;
+  height: 100vh;
+  /* background-position: center; */
+  /* background-size: cover; */
+  display: flex;
+  flex-direction: column;
 }
 
-
-
-nav {
-    width: 50%;
-    color: white;
-
-}
+/* .nav-desktop {
+  width: 50%;
+  color: white;
+  display: flex;
+} */
 
 nav ul {
-    /* height: 50%; */
+  /* height: 50%; */
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  font-size: 1.3rem;
+}
+
+nav ul li {
+  margin-left: 30px;
+}
+
+.link {
+  color: black;
+}
+
+@media screen and (max-width: 960px) {
+  .icon {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: black;
+    /* width: 200px; */
+    /* height: auto; */
+    transition: 0.5s;
+  }
+
+  .icon-rotate {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: black;
+    transition: 0.5s;
+    transform: rotate(90deg);
+    font-size: 2rem;
+  }
+
+  .nav-menu {
     display: flex;
-    flex-direction: row;
-    width: 100%;
+    flex-direction: column;
     justify-content: space-around;
-    font-size: 1.3rem;
-    /* font-family: 'Pacifico', cursive; */
-    font-family: 'Montserrat', sans-serif;
-}
-
-
-/* .login-form {
-    width: 20rem;
-    height: 40rem;
-    border-radius: 200px; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border: 5px solid black;
-    font-size: 2ch;  
-    font-family: sans-serif;  
-} */
-
-.signup-form {
-    width: 20rem;
-    height: 40rem;
-    /* border-radius: 200px; */
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    background-color: white;
-    border: 5px solid black;
-    font-size: 2ch;  
-    font-family: sans-serif;  
-}
-
-.login-form, .signup-form h1 {
-    font-family: sans-serif;
-    font-size: large;
-    
-}
-
-/* .login-form h1 {
-    font-family: sans-serif;
-    font-size: large;
-} */
-
-/* input {
-    width: 98%;
-    height: 2rem;
-} */
-
-.signup {
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-    /* justify-content: space-around; */
-}
-
-/* .form-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 80vw;
+    width: 100vw;
     height: 100vh;
-    
-} */
-/* .login {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    position: absolute;
+    top: 60px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: white;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .link {
+    font-size: 2rem;
+  }
 }
-
-p {
-    font-size: 1ch;
-    color: red
-} */
-
