--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,69 +1,99 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap");
 
-.form-container{
-    height: 90vh;
-    width: 100vw;
-    /* background-color: rgba(255, 255, 255,0.9); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.form-container {
+  height: 90vh;
+  width: 100vw;
+  margin: 0 auto;
+  /* background-color: rgba(255, 255, 255,0.9); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 p {
-    font-size: 1ch;
-    color: red
+  font-size: 1ch;
+  color: red;
 }
 
 input {
-    width: 98%;
-    height: 2rem;
+  width: 94%;
+  height: 2rem;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: 2px solid #c1c1c1;
+  padding-left: 10px;
 }
 
-.login-form h1, .signup-form h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50px
+textarea {
+  width: 94%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: 2px solid #c1c1c1;
+  padding-left: 10px;
+}
+
+.login-form h1,
+.signup-form h1 {
+  font-size: 30px;
 }
 
 .login-form {
-    width: 20rem;
-    height: 30rem;
-    /* border-radius: 200px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: white;
-    border: 5px solid black;
-    font-size: 2ch;  
-    font-family: 'Montserrat', sans-serif;  
-    
+  padding: 30px;
+  /* height: 20rem; */
+  /* border-radius: 200px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border: 2px solid #d8d8d8;
+  border-radius: 20px;
+  font-size: 2ch;
 }
 
 form {
-    margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .signup-form {
-    width: 20rem;
-    height: 40rem;
-    /* border-radius: 200px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: white;
-    border: 5px solid black;
-    font-size: 2ch;  
-    font-family: 'Montserrat', sans-serif;
+  padding: 30px;
+  /* height: 20rem; */
+  /* border-radius: 200px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border: 2px solid #d8d8d8;
+  border-radius: 20px;
+  font-size: 2ch;
 }
 
 form button {
-    margin-top: 10px;
+  /* margin-top: 10px; */
+  height: 50px;
+  border-radius: 10px;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+form button:hover {
+  background-color: #000000;
+  color: white;
+  transition: 0.5s linear;
+}
+
+h4 {
+  font-size: small;
+  color: #c1c1c1;
+  padding-bottom: 20px;
+  /* margin-top: -30px; */
+  text-align: center;
 }
