--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -7,15 +7,15 @@
   height: 7%;
   background-color: white;
   width: 100%;
-  font-family: "Montserrat";
   display: flex;
   justify-content: center;
   border-top: 2px solid #c1c1c1;
+  z-index: 10;
 }
 
 .footer-content {
   display: flex;
-  width: 30%;
+  width: 90%;
   justify-content: space-around;
   align-items: center;
 }
@@ -28,7 +28,7 @@
   padding-left: 50px;
 }
 
-.icon {
+.comment {
   font-size: 2rem;
   /* color: rgba(238, 130, 238, 0.5); */
   /* opacity: 0; */
@@ -38,22 +38,22 @@
   display: flex;
 }
 
-.link {
-  text-decoration: none;
-  font-weight: bold;
-  margin-left: 6px;
-}
+@media screen and (max-width: 960px) {
+  .footer-content .logo,
+  .year,
+  .link {
+    font-size: 0.7rem;
+  }
 
-.link:visited {
-  color: black;
-}
+  .year {
+    padding: 0;
+  }
 
-.link:hover {
-  background-color: black;
-  color: white;
-  border: 1px solid black;
-  display: flex;
-  border-radius: 2.5px;
-  padding: 2.5px;
-  transition: 0.2s ease-in-out;
+  .footer-content {
+    width: 100%;
+  }
+
+  .contact-and-icon {
+    width: 30%;
+  }
 }
