--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -1,49 +1,84 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Baloo+Tammudu+2|Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
-.account {
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height: 100vh;
-    font-family: 'Baloo Tammudu 2', cursive;
-    /* justify-content: space-around; */
-    /* padding-top: 50px; */
-    background-color: white;
+.account-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  height: 82vh;
 }
 
-.account button, .admin button {
-    width: 100px;
-    height: 30px;
+.account h1 {
+  text-align: center;
+}
+
+.account h2,
+.orders {
+  text-decoration: underline;
+  padding-left: 30px;
+}
+
+.account-info {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+}
+
+.account {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 70vh;
+  justify-content: space-around;
+
+  /* background-color: rgba(255, 255, 255, 0.7); */
+}
+
+.account button,
+.admin button {
+  width: 100px;
+  height: 30px;
 }
 
 .checkout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 100vh;
-    /* font-family: 'Baloo Tammudu 2', cursive; */
-    /* justify-content: space-around; */
-    /* padding-top: 50px; */
-    background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 100vh;
+  /* font-family: 'Baloo Tammudu 2', cursive; */
+  /* justify-content: space-around; */
+  /* padding-top: 50px; */
+  background-color: white;
 }
 
-.checkout h1, .admin h1 {
-    font-family: 'Baloo Tammudu 2', cursive;
-    text-align: left;
-    
+.checkout h1,
+.admin h1 {
+  font-family: "Baloo Tammudu 2", cursive;
+  text-align: left;
 }
 
-.admin {       
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height: 100vh;
-    /* justify-content: space-around; */
-    /* padding-top: 50px; */
-    background-color: white;
-    padding-left: 70px;
-    
+.admin {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  height: 100vh;
+  /* justify-content: space-around; */
+  /* padding-top: 50px; */
+  background-color: white;
+  padding-left: 70px;
 }
 
+@media screen and (min-width: 961px) {
+  .account-info {
+    width: 40vw;
+    margin: 0 auto;
+  }
+
+  .account h2,
+  .orders {
+    padding-left: 400px;
+  }
+
+  .account-container {
+    height: 85vh;
+  }
+}
