--- a/client/src/styles/eachproduct.css
+++ b/client/src/styles/eachproduct.css
@@ -1,58 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
 
 .eachproduct {
-    height: 90vh;
-    width: 100vw;
-    background-color: rgba(255, 255, 255,0.9);
-    display: flex;
-    justify-content: center;
-    
+  height: 85vh;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  justify-content: center;
 }
 
 .container-products {
-    display: flex;
-    flex-wrap: wrap;
-    width: 90vw;
-    height: 90vh;
-    justify-content: space-around;
-    align-items: center;
-    /* background-color: white; */
-    
-    
-    
+  display: flex;
+  flex-wrap: wrap;
+  width: 90vw;
+  height: 85vh;
+  justify-content: space-around;
+  align-items: center;
+  /* background-color: white; */
 }
 
 .container-products {
-    font-size: 0.8rem;
-    text-align: left;
-    list-style: none;
+  font-size: 0.8rem;
+  text-align: left;
+  list-style: none;
 }
 
 .eachproduct h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
-    padding-top: 100px;
+  font-size: 3rem;
+  padding-top: 100px;
 }
 
 .container-products img {
-    width: 300px;
-    height: auto;
+  width: 300px;
+  height: auto;
 }
 
 .product-card {
-    background-color: white;
-    width: 340px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    border: 1px black solid;
-    padding-top: 20px;
-    padding-bottom: 20px;
-
+  background-color: white;
+  width: 340px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px black solid;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .product-card :nth-child(2) {
-    padding-top: 10px;
+  padding-top: 10px;
 }
