--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -2,32 +2,45 @@
 @import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
 .account-container {
-  background-color: rgba(255, 255, 255, 0.8);
-  height: 82vh;
+  background-color: rgba(226, 222, 222, 0.8);
+  height: 100vh;
 }
 
 .account h1 {
   text-align: center;
+  padding-top: 20px;
+  font-size: 2rem;
 }
 
 .account h2,
 .orders {
   text-decoration: underline;
   padding-left: 30px;
+  padding-top: 20px;
+  font-size: 1.7rem;
 }
 
 .account-info {
   display: flex;
-  justify-content: space-between;
-  padding: 0 40px;
+  /* justify-content: space-between; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  /* padding: 0 40px; */
+}
+
+.account-info h3 {
+  font-size: 1.3rem;
 }
 
 .account {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 70vh;
-  justify-content: space-around;
+  width: 95vw;
+  height: 100vh;
+  /* justify-content: space-around; */
+  margin: 0 auto;
 
   /* background-color: rgba(255, 255, 255, 0.7); */
 }
@@ -42,7 +55,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80vw;
+  width: 100vw;
   height: 100vh;
   /* font-family: 'Baloo Tammudu 2', cursive; */
   /* justify-content: space-around; */
