--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -5,7 +5,6 @@
 * {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: "Montserrat";
   box-sizing: border-box;
 }
@@ -14,134 +13,16 @@
   font-family: "Pacifico", cursive;
 } */
 
-nav li {
-  list-style: none;
-  /* text-align: center; */
-}
-
-.logo-link {
-  color: black;
-  text-decoration: none;
-}
-
-header {
-  background-color: #ffffff;
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-bottom: 2px solid #c1c1c1;
-}
-
-.App {
+.main-container {
   background-image: url("../images/pizza.jpg");
   width: 100vw;
   height: 100vh;
-  /* background-position: center; */
-  /* background-size: cover; */
-  display: flex;
-  flex-direction: column;
-}
-
-nav ul {
-  /* height: 50%; */
-  display: flex;
-  flex-direction: row;
-  font-size: 1.5rem;
-  /* width: 100%; */
-}
-
-nav .link {
-  margin-left: 50px;
-}
-
-.link {
-  text-decoration: none;
-  font-weight: bold;
-  /* margin-left: 50px; */
-  color: black;
-}
-
-.link:visited {
-  color: black;
-}
-
-.main-logo {
-  text-align: center;
-}
-
-@media screen and (max-width: 960px) {
-  .icon {
-    position: absolute;
-    right: 20px;
-    top: 25px;
-    color: black;
-    transition: 0.5s;
-    font-size: 1.5rem;
-  }
-
-  .icon-rotate {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    color: black;
-    transition: 0.5s;
-    transform: rotate(90deg);
-    font-size: 1.5rem;
-  }
-
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 83vh;
-    position: absolute;
-    top: 85px;
-    right: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-  }
-
-  .nav-menu.active {
-    background: rgb(226, 224, 224);
-    right: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-
-  nav .link {
-    font-size: 1.5rem;
-  }
-
-  nav li {
-    padding-top: 100px;
-  }
-
-  .logo {
-    font-size: 1.5rem;
-  }
 }
 
 @media screen and (max-width: 768px) {
-  .App {
+  .main-container {
     background-image: url("../images/pizza_mobile.jpg");
     width: 100vw;
-    height: 92vh;
-  }
-}
-
-@media screen and (min-width: 961px) {
-  .link:hover {
-    background-color: black;
-    color: white;
-    border: 1px solid black;
-    display: flex;
-    border-radius: 2.5px;
-    padding: 2.5px;
-    transition: 0.2s ease-in-out;
+    height: 100vh;
   }
 }
