--- a/client/src/styles/eachproduct.css
+++ b/client/src/styles/eachproduct.css
@@ -5,6 +5,7 @@
   width: 100vw;
   background-color: rgba(255, 255, 255, 0.9);
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -49,4 +50,68 @@
 
 .product-card :nth-child(2) {
   padding-top: 10px;
+}
+
+.total {
+  display: flex;
+  justify-content: space-around;
+  width: 70vw;
+  margin: 0 auto;
+}
+
+.total button {
+  width: 30%;
+}
+
+.cart {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 960px) {
+  .eachproduct {
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+  }
+
+  .container-products {
+    margin-top: 50px;
+    margin: 0 auto;
+  }
+
+  .product-card {
+    width: 210px;
+    margin-top: 20px;
+  }
+
+  .product-card img {
+    width: 200px;
+  }
+
+  .total h1 {
+    font-size: 1.7rem;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .total h1 {
+    font-size: 1.3rem;
+  }
+
+  .total button {
+    /* width: 150px; */
+    /* height: 50px; */
+  }
+
+  .total {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
