--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -2,19 +2,19 @@
 
 .home-main {
   display: flex;
+  flex-direction: column;
   /* justify-content: center;
-    align-items: center; */
-  margin-top: 50px;
-  margin-left: 20px;
+  align-items: center; */
+  height: 100%;
 }
 
 .home-container {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 60vh;
   /* border-radius: 200px; */
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: center; */
   /* align-items: center; */
   /* background-color: white;
     border: 5px solid black; */
@@ -25,18 +25,43 @@
 .home-container h1,
 .home-container h2 {
   color: white;
-  font-size: 2rem;
-  text-align: left;
+  font-size: 3rem;
+  text-align: center;
   font-family: "Montserrat", sans-serif;
+  padding: 80px 20px 0px;
+}
+
+.btn-log-reg {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+  /* height: 100px; */
+}
+
+.buttons {
+  height: 80px;
+  width: 300px;
+  background-color: rgb(70, 68, 68);
+  font-size: 2rem;
 }
 
 @media screen and (max-width: 769px) {
   .home-container h1,
   .home-container h2 {
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     text-align: left;
-    font-family: "Montserrat", sans-serif;
+    padding: 50px 20px 0px;
+  }
+
+  .buttons {
+    height: 50px;
+    width: 150px;
+    font-size: 1rem;
+  }
+  .home-container :nth-child(1) {
+    /* margin-top: 100px; */
   }
 }
 
@@ -44,8 +69,8 @@
   .home-container h1,
   .home-container h2 {
     color: white;
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     text-align: left;
-    font-family: "Montserrat", sans-serif;
+    /* font-family: "Montserrat", sans-serif; */
   }
 }
