--- a/client/src/styles/products.css
+++ b/client/src/styles/products.css
@@ -10,7 +10,7 @@
   display: flex;
   margin: 0 auto;
   /* background-color: rgba(255, 255, 255,0.5); */
-  height: 75vh;
+  height: 100vh;
   width: 100vw;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -140,5 +140,29 @@
 
   .products .card .imgCard img {
     opacity: 0.2;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .products {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .container-component-products {
+    margin-left: 18px;
+  }
+
+  .products .card {
+    width: 90%;
+    height: 90px;
+    /* top: 45px; */
+    display: flex;
+  }
+
+  .content {
+    align-items: center;
+    height: 100%;
+    width: 100%;
   }
 }
