--- a/client/src/styles/account.css
+++ b/client/src/styles/account.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
 .account-container {
-  background-color: rgba(226, 222, 222, 0.8);
+  /* background-color: rgba(226, 222, 222, 0.8); */
   height: 100vh;
 }
 
