--- a/client/src/styles/eachproduct.css
+++ b/client/src/styles/eachproduct.css
@@ -9,6 +9,15 @@
   justify-content: center;
 }
 
+.cart {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container-products {
   display: flex;
   flex-wrap: wrap;
@@ -57,19 +66,11 @@
   justify-content: space-around;
   width: 70vw;
   margin: 0 auto;
+  margin-top: 50px;
 }
 
 .total button {
   width: 30%;
-}
-
-.cart {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 @media screen and (max-width: 960px) {
@@ -103,15 +104,17 @@
     font-size: 1.3rem;
   }
 
-  .total button {
-    /* width: 150px; */
-    /* height: 50px; */
-  }
-
   .total {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    bottom: 0;
+    position: relative;
+    margin-top: 50px;
+  }
+
+  .container-products {
+    height: 100vh;
   }
 }
